@@ -462,6 +462,7 @@ namespace libtorrent {
 		int seed_rank(aux::session_settings const& s) const;
 
 		void add_piece(piece_index_t piece, char const* data, add_piece_flags_t flags);
+		void add_piece_async(piece_index_t piece, std::vector<char> data, add_piece_flags_t flags);
 		void on_disk_write_complete(storage_error const& error
 			, peer_request const& p);
 
