@@ -121,7 +121,7 @@ namespace libtorrent {
 #ifndef BOOST_NO_EXCEPTIONS
 			try {
 #endif
-				(t.get()->*f)(a...);
+				(t.get()->*f)(std::move(a)...);
 #ifndef BOOST_NO_EXCEPTIONS
 			} catch (system_error const& e) {
 				ses.alerts().emplace_alert<torrent_error_alert>(torrent_handle(m_torrent)
@@ -153,7 +153,7 @@ namespace libtorrent {
 #ifndef BOOST_NO_EXCEPTIONS
 			try {
 #endif
-				(t.get()->*f)(a...);
+				(t.get()->*f)(std::move(a)...);
 #ifndef BOOST_NO_EXCEPTIONS
 			} catch (...) {
 				ex = std::current_exception();
@@ -189,7 +189,7 @@ namespace libtorrent {
 #ifndef BOOST_NO_EXCEPTIONS
 			try {
 #endif
-				r = (t.get()->*f)(a...);
+				r = (t.get()->*f)(std::move(a)...);
 #ifndef BOOST_NO_EXCEPTIONS
 			} catch (...) {
 				ex = std::current_exception();
@@ -696,6 +696,12 @@ namespace libtorrent {
 	void torrent_handle::add_piece(piece_index_t piece, char const* data, add_piece_flags_t const flags) const
 	{
 		sync_call(&torrent::add_piece, piece, data, flags);
+	}
+
+	void torrent_handle::add_piece(piece_index_t piece, std::vector<char> data
+		, add_piece_flags_t const flags) const
+	{
+		async_call(&torrent::add_piece_async, piece, std::move(data), flags);
 	}
 
 	void torrent_handle::read_piece(piece_index_t piece) const
