@@ -1,4 +1,5 @@
 
+	* add asynchronous overload of torrent_handle::add_piece()
 	* default to a single hashing thread, for full checks
 	* Fix bug when checking files and the first piece is invalid
 
